added event location and image

--- a/hacktoberfest/index.html
+++ b/hacktoberfest/index.html
@@ -64,7 +64,7 @@
     <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
       <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Google Developer Day in Bhubaneswar</span>
+          <span class="mdl-layout-title">Hacktoberfest Bhubaneswar</span>
           <div class="mdl-layout-spacer"></div>
         </div>
       </header>
@@ -73,14 +73,15 @@
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <img src="images/banner.jpg" alt="" />
-            <h3>Google Developer Day is coming to Bhubaneswar</h3>
+            <img style='width:100%' src="images/banner.png" alt="" />
+            <h3>Hacktoberfest Bhubaneswar by DigitalOcean</h3>
             <p>
               Google Developer Days are interactive conferences, providing the latest updates on Google technologies and open platforms for developers and industry leaders. Google Developer Days 2017 will be held throughout year at various cities in India. We're excited to share our thoughts on innovative technologies and encourage developers to build the next big mobile, web, cloud or machine learning solutions.
             </p>
-            <h4>Come join us @ Hotel Swosti Premium, Bhubaneswar on 7 April, 2017</h4>
-            <h3>Congratulations</h3>
-              <p>
+            <h4>Come join us @ CET, Bhubaneswar on 27 October, 2017</h4>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14970.30167260589!2d85.775839!3d20.2764361!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xde71ead59307dcca!2sCollege+of+Engineering+And+Technology!5e0!3m2!1sen!2sin!4v1507469099699" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <h3>Agenda</h3>
+              <!-- <p>
                 If you are here, you have already completed the hard part i.e. daring to Register.
               </p>
               <p>
@@ -154,11 +155,11 @@
                   <p>
                     <b>Click on submit</b>
                   </p>
-                </li>
+                </li> -->
                 <li>
                   <h6>And that's it.</h6>
                   <p><b>Now go get a cookie and celebrate.</b></p>
-                  <p><b>Signing off Rishav Agarwal , looking forward to see you on April 7 !</b></p>
+                  <p><b>Signing off Rishav Agarwal , looking forward to see you on October 27 !</b></p>
                 </li>
               </ol>
           </div>
