--- a/hacktoberfest/index.html
+++ b/hacktoberfest/index.html
@@ -21,7 +21,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Google Developer Day in Bhubaneswar</title>
+    <title>Hacktoberfest Bhubaneswar</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -76,90 +76,35 @@
             <img style='width:100%' src="images/banner.png" alt="" />
             <h3>Hacktoberfest Bhubaneswar by DigitalOcean</h3>
             <p>
-              Google Developer Days are interactive conferences, providing the latest updates on Google technologies and open platforms for developers and industry leaders. Google Developer Days 2017 will be held throughout year at various cities in India. We're excited to share our thoughts on innovative technologies and encourage developers to build the next big mobile, web, cloud or machine learning solutions.
+              Hacktoberfest is an international event to celebrate the world of open source. Zairza will be participating in the celebration by hosting an event here in Bhubaneswar. 
+              This event will try to galvanize developers towards open source contribution. We will be having talks by experienced contributors and a small workshop demonstrating the process of contribution.
             </p>
             <h4>Come join us @ CET, Bhubaneswar on 27 October, 2017</h4>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14970.30167260589!2d85.775839!3d20.2764361!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xde71ead59307dcca!2sCollege+of+Engineering+And+Technology!5e0!3m2!1sen!2sin!4v1507469099699" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             <h3>Agenda</h3>
-              <!-- <p>
-                If you are here, you have already completed the hard part i.e. daring to Register.
-              </p>
               <p>
-                Now you just need to complete the form
-              </p>
-              <p>
-                Follow these steps to ensure you face no difficulty in registering.
+                Index for Hacktoberfest 
               </p>
               <ol>
                 <li>
-                  <h6>Sign in to Google</h6>
-                  <p>
-                    To fill up the form, you must me logged in to google.
-                    <a target = '_blank' href = "https://accounts.google.com/Login">Click here</a> and sign into google.
-                  </p>
-                  <p>
-                    From the Sessions section, Select the field "Google Developer Day India 2017 - Bhubaneswar".
-                  </p>
-                  <img src="images/1.jpg" alt="" />
-                  <p>
-                    Click on Submit to move to the next section.
-                  </p>
+                  <h6> Welcome Speech and Introduction to Hacktoberfest.</h6>
                 </li>
                 <li>
-                  <h6>Your Details</h6>
-                  <p>
-                    <b>Fill up your Email, First Name and Last Name and Check the Acknowledgment field.</b>
-                  </p>
-                  <p>
-                    <b>For the company name field,</b>
-                    <ul>
-                      <li>If you are a part of a company, GREAT ! Go ahead and fill it up !</li>
-                      <li>If not, you can give the official website URL of your college.</li>
-                    </ul>
-                  </p>
-                  <p>
-                    <b>For the 'Your solution's package ID or playstore link' field,</b>
-                    <ul>
-                      <li>If you have a package ID for a software you created or if you are an Android developer and owns a playstore link, Fill it up here.</li>
-                      <li>You can also fill up the url of your linkedn profile page.</li>
-                    </ul>
-                  </p>
-                  <img src="images/linkedn1.jpg" width="80%"alt="" />
-                  <br>
-                  <img src="images/linkedn2.jpg" width="80%"alt="" />
-                  <p>
-                    <b>For the 'Web App URL of your solution' field,</b><br>
-                    Fill up the url of anything that you contributed to and can be found online.<br>
-                    Otherwise, leave it blank.
-                  </p>
-                  <p>
-                    <b>'Which of the below options best describes your day to day job?' This field is self-explanatory.</b>
-                  </p>
-                  <p>
-                    <b>'Kindly share a link to your github/stackeoverflow profile '</b><br>
-                    If you already have a github/stackoverflow account, fill it here<br>
-                    Otherwise, it only takes few minutes to <a target="_blank" href="https://github.com/join">create</a> one!
-                  </p>
-                  <img src="images/github.jpg" width="80%" alt="" />
-                  <p>
-                    <b>'Years of professional experience' This field is self-explanatory.</b>
-                  </p>
-                  <p>
-                    <b>'Which of the below tools/platforms do you use on regular basis?'</b><br>
-                    Select the options of all the tools/platforms you have used before.
-                  </p>
-                  <p>
-                    <b>What is the one thing that you want to learn at Google Developer Days?</b><br>
-                    In this section, describe about your interests and how you can benefit from this event.
-                  </p>
-                  <p>
-                    <b>Click on submit</b>
-                  </p>
-                </li> -->
+                  <h6> Introduction to Opensource and Github</h6>
+                </li> 
                 <li>
-                  <h6>And that's it.</h6>
-                  <p><b>Now go get a cookie and celebrate.</b></p>
-                  <p><b>Signing off Rishav Agarwal , looking forward to see you on October 27 !</b></p>
+                  <h6> Hands on workshop to contribute to a Public repository. </h6>
+                </li> 
+                <li>
+                  <h6> Tech Discussion on projects done by Zairza. </h6>
+                </li> 
+                <li>
+                  <h6> Openhouse Discussion </h6>
+                </li> 
+                <li>
+                  <h6>And that's it. We take some amazing pics and get to know you better. </h6>
+                  <p><b> Yes there will me some amazing swag by DigitalOcean :D </b></p>
+                  <p><b>Signing off Team Zairza , looking forward to see you on October 27 !</b></p>
                 </li>
               </ol>
           </div>
@@ -167,7 +112,7 @@
 
       </main>
     </div>
-    <a href="https://events.withgoogle.com/in-devdays-2017/registrations/new/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Registration Form</a>
+    <a href="https://www.eventbrite.com/e/hacktoberfest-zairza-tickets-38700103050" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Registration Form</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
