added event location and image

--- a/hacktoberfest/index.html
+++ b/hacktoberfest/index.html
@@ -102,8 +102,8 @@
                   <h6> Openhouse Discussion </h6>
                 </li> 
                 <li>
-                  <h6>And that's it. We take some amazing pics and get to know you better. </h6>
-                  <p><b> Yes there will me some amazing swag by DigitalOcean :D </b></p>
+                  <h6>And that's it. </h6>
+                  <p><b> Yes there will be some amazing swag by DigitalOcean :D </b></p>
                   <p><b>Signing off Team Zairza , looking forward to see you on October 27 !</b></p>
                 </li>
               </ol>
