--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 			</nav>
 		</div>
 	</header>
-
 	<section id="fh5co-home" data-section="home" style="background-image: url(images/pexels-photo-356056.jpeg);opacity: 0.97	" data-stellar-background-ratio="0.5">
 		<div class="gradient"></div>
 		<div class="container">
@@ -64,18 +63,29 @@
 							<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"></a>
 							<br>
 							<br>
-							<!-- <div class="call-to-action">
+							<div class="call-to-action">
 								<h3 class="to-animate">
-								<a href="#" class="download to-animate">Login</a>
-								<a href="#" class="download to-animate">Submit An Idea</a>
+								<a style="background:#062be2;border:2px solid #062be2;"href="/wirebytes.pdf" target="_blank" class="download to-animate">Newsletter</a>
 								</h3>
-							</div> -->
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+	<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-lg red">
+        <i class="fa fa-pencil"></i>
+    </a>
+
+    <ul>
+        <li><a class="btn-floating red"><i class="fa fa-star"></i></a></li>
+        <li><a class="btn-floating yellow darken-1"><i class="fa fa-user"></i></a></li>
+        <li><a class="btn-floating green"><i class="fa fa-envelope"></i></a></li>
+        <li><a class="btn-floating blue"><i class="fa fa-shopping-cart"></i></a></li>
+    </ul>
+</div>
 	<section id="fh5co-testimony" data-section="testimony">
 		<div class="container">
 			<div class="row">
